<resources>
    <string name="app_name">Not Bored</string>
    <string name="start">Start</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="participantes">Participantes</string>
    <string name="not_bored">Not Bored</string>
    <string name="try_another">Try another</string>
    <string name="busywork">Busywork</string>
    <string name="music">Music</string>
    <string name="relaxation">Relaxation</string>
    <string name="cooking">Cooking</string>
    <string name="diy">Diy</string>
    <string name="charity">Charity</string>
    <string name="social">Social</string>
    <string name="recreational">Recreational</string>
    <string name="education">Education</string>
</resources>